--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta name="autour" content="Shin" />
     <meta name="description" content="Welcome to my homepage" />
     <title>I Love fitness</title>
+    <link href="styles.css" rel="stylesheet" />
+
+    <style>
+      .box {
+        background-color: yellow;
+      }
+      .inside-box {
+        background-color: green;
+      }
+    </style>
   </head>
 
   <body>
-    <section>
-      <header id="HeaderNumberone" class="defaultHeader">
-        <h1>Title of a section</h1>
-      </header>
-    </section>
-
-    <div>
-      <header>Title of the unknown</header>
-    </div>
+    <h1>Title</h1>
+    <p>What the ?</p>
+    <a href="contact.me.html" target="blank">fake link </a>
+    <div class="box"></div>
+    <div class="inside-box"></div>
   </body>
 </html>
