--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     <link href="styles.css" rel="stylesheet" />
 
     <style>
-      .box {
-        color: white;
-        background-color: blue;
-        transition: background-color 0.5s ease-in-out;
+      body {
+        background-color: green;
       }
-      .box:hover {
-        background-color: red;
-        color: green;
+      @media screen and (min-width: 320px) and (max-width: 640px) {
+        body {
+          background-color: blue;
+        }
       }
     </style>
   </head>
 
   <body>
-    <span class="box">LA</span>
+    <div class="box">1111</div>
   </body>
 </html>
